# MyDiscordBot

./: db.sqlite3  pyproject.toml
env/Scripts/: activate  activate.bat
