[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Reguna <regunakyle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.8"
gallery-dl = "^1.18.3"
yfinance = "^0.1.63"
configparser = "^5.0.2"
py-cord = "^1.7.3"
tweepy = "^4.3.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.1.0"
black = "^21.7b0"
pytest = "^6.2.4"
mypy = "^0.910"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
