[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Reguna <regunakyle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.8"
gallery-dl = "^1.22.1"
yfinance = "^0.1.63"
configparser = "^5.0.2"
tweepy = "^4.3.0"
python-dotenv = "^0.20.0"
"discord.py" = "^1.7.3"

[tool.poetry.dev-dependencies]
ipykernel = "*"
black = "*"
pytest = "*"
mypy = "*"
pyperclip = "*"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
